index added for econometrics so that links are not lost

--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
               <ol class="menu-category-list has-images">
 			  <li class="menu-item">
                 <div class="menu-item-info">
+                  <h4 class="menu-item-name">econometrics</h4>
+                  <span class="menu-item-price"><a href="http://yathish1618.github.io/econometrics/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/econometrics" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">This is a page for the stuff that I make for my economics blog.</p>
+                </div>
+                <div class="menu-item-image has-meta-content">
+                  <img src="assets/econometrics.jpg" />
+                </div>
+              </li>
+              <li class="menu-item">
+                <div class="menu-item-info">
                   <h4 class="menu-item-name">music-catalogue</h4>
                   <span class="menu-item-price"><a href="http://yathish1618.github.io/music-catalogue/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/music-catalogue" target="_blank">GitHub</a></span>
                   <p class="menu-item-description">This is a dump of my songs library that I've been collecting for over a decade now.</p>
@@ -182,6 +192,16 @@
             <div id="pages" class="menu-category">
               <h3 class="menu-category-name">Pages</h3>
               <ol class="menu-category-list has-images">
+                <li class="menu-item">
+                <div class="menu-item-info">
+                  <h4 class="menu-item-name">econometrics</h4>
+                  <span class="menu-item-price"><a href="http://yathish1618.github.io/econometrics/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/econometrics" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">This is a page for the stuff that I make for my economics blog.</p>
+                </div>
+                <div class="menu-item-image has-meta-content">
+                  <img src="assets/econometrics.jpg" />
+                </div>
+              </li>
 			  <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">music-catalogue</h4>
