--- a/econometrics/index.html
+++ b/econometrics/index.html
@@ -9,8 +9,10 @@
     <div>
       <ol>
         <li>
-          <a href="india-state-wise-gdp-current-prices-2004-05.html">india: State-wise GDP (current prices 2004-05)</a>
-          <a href="india-state-wise-gdp-current-prices-2017-18.html">india: State-wise GDP (current prices 2017-18)</a>
+          <a href="india-state-wise-gdp-current-prices-2004-05.html">India: State-wise GDP (current prices 2004-05)</a>
+        </li>
+        <li>
+          <a href="india-state-wise-gdp-current-prices-2017-18.html">India: State-wise GDP (current prices 2017-18)</a>
         </li>
       </ol>
     </div>
