--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 
     <link href="assets/base.css" media="screen" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/favicon-16x16.png" type="image/x-icon">
+    <link rel="icon" href="assets/favicon-16x16.png" type="image/x-icon">
 
     <script src="assets/modernizr.js" type="text/javascript"></script>
   </head>
