added three more years

--- a/econometrics/index.html
+++ b/econometrics/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>yathish1618/econometrics</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+    <link rel="shortcut icon" href="../assets/favicon-16x16.png" type="image/x-icon">
+    <link rel="icon" href="../assets/favicon-16x16.png" type="image/x-icon">
   </head>
   <body>
     <div>
@@ -13,6 +15,15 @@
         </li>
         <li>
           <a href="india-state-wise-gdp-current-prices-2017-18.html">India: State-wise GDP (current prices 2017-18)</a>
+        </li>
+        <li>
+          <a href="india-state-wise-gdp-current-prices-2017-18.html">India: State-wise GDP (current prices 2010-11)</a>
+        </li>
+        <li>
+          <a href="india-state-wise-gdp-current-prices-2017-18.html">India: State-wise GDP (current prices 1980-81)</a>
+        </li>
+        <li>
+          <a href="india-state-wise-gdp-current-prices-2017-18.html">India: State-wise GDP (current prices 1990-91)</a>
         </li>
       </ol>
     </div>
