--- a/econometrics/india-state-wise-gdp-current-prices-2017-18.html
+++ b/econometrics/india-state-wise-gdp-current-prices-2017-18.html
@@ -1,4 +1,9 @@
 <html>
+<head>
+	
+    <link rel="shortcut icon" href="../assets/favicon-16x16.png" type="image/x-icon">
+    <link rel="icon" href="../assets/favicon-16x16.png" type="image/x-icon">
+</head>
 <body>
  <!--<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>-->
  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
