--- a/econometrics/world-gdp-trends/index.html
+++ b/econometrics/world-gdp-trends/index.html
@@ -58,7 +58,7 @@ position: absolute;
                   Use keyboard arrows to navigate to right or left.
               </li>
               <li>
-                  All data is sourced from World Bank (<a href="https://data.worldbank.org/indicator/NY.GDP.MKTP.CD?view=map">here</a>). Cleaned data used to generate these charts can be found <a href="">here</a>.
+                  All data is sourced from World Bank (<a href="https://data.worldbank.org/indicator/NY.GDP.MKTP.CD?view=map">here</a>). Cleaned data used to generate these charts can be found <a href="data/WB-World-GDP-1960-2017.csv">here</a>.
               </li>
               <li>Read my related blog post <a href="">here</a>.</li>
           </ol>
