--- a/md-master/index.htm
+++ b/md-master/index.htm
@@ -29,7 +29,7 @@
             <label for="by"><b>Years:</b></label>
             <input type="text" placeholder="Used only if date is empty." name="by" value="3"><br>
             <label for="dt"><b>Enter Date:</b></label>
-            <input type="text" placeholder="Format: 23 April 2016" name="dt" value="">
+            <input type="text" placeholder="Date/Year. Eg. 23 Apr 2016" name="dt" value="">
             <table style="table-layout: fixed;width: 100%;padding-bottom: 10px;">
                 <tbody>
                     <tr>
