--- a/imdb-rating-history-graph/index.html
+++ b/imdb-rating-history-graph/index.html
@@ -1,5 +1,5 @@
 <html>
-  <title>IMDb Rating History</title>
+  <title>IMDb Rating History Graph</title>
   <meta charset="utf-8">
 <head>
     <script type="text/javascript" src="loader.js"></script>
