--- a/imdb-rating-history-graph/index.html
+++ b/imdb-rating-history-graph/index.html
@@ -19,11 +19,12 @@
         </div>
         <input type="submit" class="disabledSubmit" disabled>
     </form>
-    <a id="loadingInfo"></a>
+    <a id="loadingInfo">&nbsp;</a>
     <br><br>
     <div id="wrapper">
+        <div id="loading" class="modal" style="display: none;"></div>
         <div id="chart_div">&nbsp;</div>
-        <div id="poster"><img></div>
+        <div id="poster"><a target="_blank"><img></a></div>
     </div>
     <div id="more"><a href="https://github.com/yathish1618/yathish1618.github.io/blob/master/imdb-rating-history-graph/ReadMe.md" target="_blank">Read me</a>  |  <a onclick="downloadCSV()" href="" id="csv">Download data (csv)</a></div>
 </body>
