imdb top 250 page listed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <header class="profile-logo">
                     <div class="profile-logo-image">
                         <img alt="Square Open Source " src="assets/logo.png" />
-            </div>
+                     </div>
                         <div class="profile-name">
                             <h1>yathish1618</h1>
                         </div>
@@ -47,13 +47,23 @@
                         <ol class="menu-category-list has-images">
                             <li class="menu-item">
                                 <div class="menu-item-info">
+                                    <h4 class="menu-item-name">IMDb-Top 250-Graph</h4>
+                                    <span class="menu-item-price"><a href="https://yathish1618.github.io/imdb-top250-charts/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/tree/master/imdb-top250-charts" target="_blank">GitHub</a></span>
+                                    <p class="menu-item-description">This is a page where you can see the trends in IMDb Top 250 over the years.</p>
+                                </div>
+                                <div class="menu-item-image has-meta-content">
+                                    <img src="imdb-top-250.png" />
+                                </div>
+                            </li>
+                            <li class="menu-item">
+                                <div class="menu-item-info">
                                     <h4 class="menu-item-name">IMDb-rating-graph</h4>
                                     <span class="menu-item-price"><a href="https://yathish1618.github.io/imdb-rating-history-graph/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/tree/master/imdb-rating-history-graph" target="_blank">GitHub</a></span>
                                     <p class="menu-item-description">This is a page where you can see the rating history of any movie on IMDb.</p>
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/imdb-rating-graph.png" />
-                </div>
+                                </div>
                             </li>
                             <li class="menu-item">
                                 <div class="menu-item-info">
@@ -63,9 +73,8 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/econometrics.jpg" />
-                </div>
+                                 </div>
                             </li>
-                            
                             <li class="menu-item">
                                 <div class="menu-item-info">
                                     <h4 class="menu-item-name">music-catalogue</h4>
@@ -74,7 +83,7 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/music-catalogue.png" />
-                </div>
+                                </div>
                             </li>
                             <li class="menu-item">
                                 <div class="menu-item-info">
@@ -84,7 +93,7 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/water-is-dangerous.png" />
-                </div>
+                                </div>
                             </li>
                             <li class="menu-item">
                                 <div class="menu-item-info">
@@ -94,7 +103,7 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/random-pi.png" />
-                </div>
+                                </div>
                             </li>
                             <li class="menu-item">
                                 <div class="menu-item-info">
@@ -104,7 +113,7 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/india-religion-data.png" />
-                </div>
+                                </div>
                             </li>
                             <li class="menu-item">
                                 <div class="menu-item-info">
@@ -114,7 +123,7 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/t-rex-mario.png" />
-                </div>
+                                </div>
                             </li>
                             <li class="menu-item">
                                 <div class="menu-item-info">
@@ -124,7 +133,7 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/lung-breaker.png" />
-                </div>
+                                </div>
                             </li>
                         </ol>
                         <ol class="menu-category-list has-images">
@@ -136,7 +145,7 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/you-see-a-gorgeous-girl.png" />
-                </div>
+                                </div>
                             </li>
                             <li class="menu-item">
                                 <div class="menu-item-info">
@@ -146,7 +155,7 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/t-rex-original.png" />
-                </div>
+                                </div>
                             </li>
                         </ol>
                     </div>
@@ -161,7 +170,7 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/lung-breaker.png" />
-                </div>
+                                </div>
                             </li>
                             <li class="menu-item">
                                 <div class="menu-item-info">
@@ -171,7 +180,7 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/random-pi.png" />
-                </div>
+                                </div>
                             </li>
                             <li class="menu-item">
                                 <div class="menu-item-info">
@@ -181,7 +190,7 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/t-rex-mario.png" />
-                </div>
+                                </div>
                             </li>
                         </ol>
                         <ol class="menu-category-list has-images">
@@ -193,13 +202,23 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/t-rex-original.png" />
-                </div>
+                                </div>
                             </li>
                         </ol>
                     </div>
                     <div id="pages" class="menu-category">
                         <h3 class="menu-category-name">Pages</h3>
                         <ol class="menu-category-list has-images">
+                            <li class="menu-item">
+                                <div class="menu-item-info">
+                                    <h4 class="menu-item-name">IMDb-Top 250-Graph</h4>
+                                    <span class="menu-item-price"><a href="https://yathish1618.github.io/imdb-top250-charts/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/tree/master/imdb-top250-charts" target="_blank">GitHub</a></span>
+                                    <p class="menu-item-description">This is a page where you can see the trends in IMDb Top 250 over the years.</p>
+                                </div>
+                                <div class="menu-item-image has-meta-content">
+                                    <img src="imdb-top-250.png" />
+                                </div>
+                            </li>
                           <li class="menu-item">
                                 <div class="menu-item-info">
                                     <h4 class="menu-item-name">IMDb-rating-graph</h4>
@@ -208,7 +227,7 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/imdb-rating-graph.png" />
-                </div>
+                                 </div>
                             </li>
                             <li class="menu-item">
                                 <div class="menu-item-info">
@@ -218,7 +237,7 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/econometrics.jpg" />
-                </div>
+                                </div>
                             </li>
                             <li class="menu-item">
                                 <div class="menu-item-info">
@@ -228,7 +247,7 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/music-catalogue.png" />
-                </div>
+                                </div>
                             </li>
                             <li class="menu-item">
                                 <div class="menu-item-info">
@@ -238,7 +257,7 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/water-is-dangerous.png" />
-                </div>
+                                </div>
                             </li>
                             <li class="menu-item">
                                 <div class="menu-item-info">
@@ -248,7 +267,7 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/india-religion-data.png" />
-                </div>
+                                </div>
                             </li>
                         </ol>
                         <ol class="menu-category-list has-images">
@@ -260,7 +279,7 @@
                                 </div>
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/you-see-a-gorgeous-girl.png" />
-                </div>
+                                </div>
                             </li>
                         </ol>
                     </div>
