--- a/imdb-rating-history-graph/index.html
+++ b/imdb-rating-history-graph/index.html
@@ -1,6 +1,8 @@
 <html>
   <title>IMDb Rating History Graph</title>
   <meta charset="utf-8">
+    <meta name="description" content="IMDb Movie Rating over the years visualised">
+  <meta name="keywords" content="d3,imdb,chart,graph,visualisation,data">
 <head>
     <script type="text/javascript" src="loader.js"></script>
     <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
@@ -26,7 +28,7 @@
         <div id="chart_div">&nbsp;</div>
         <div id="poster"><a target="_blank"><img></a></div>
     </div>
-    <div id="more"><a href="https://github.com/yathish1618/yathish1618.github.io/blob/master/imdb-rating-history-graph/ReadMe.md" target="_blank">Read me</a>  |  <a onclick="downloadCSV()" href="" id="csv">Download data (csv)</a></div>
+    <div id="more"><a href="https://github.com/yathish1618/yathish1618.github.io/blob/master/imdb-rating-history-graph/ReadMe.md" target="_blank">Read me</a>  |  <a onclick="downloadCSV()" href="" id="csv">Download data (csv)</a> | <a href="https://yathish1618.github.io/" target="_blank">Home</a></div>
 </body>
 <script type="text/javascript" src="IMDbsearch.js"></script>
 
