--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                     <p class="menu-item-description">This is a page where you can see the trends in IMDb Top 250 over the years.</p>
                                 </div>
                                 <div class="menu-item-image has-meta-content">
-                                    <img src="imdb-top-250.png" />
+                                    <img src="assets/imdb-top-250.png" />
                                 </div>
                             </li>
                             <li class="menu-item">
@@ -216,7 +216,7 @@
                                     <p class="menu-item-description">This is a page where you can see the trends in IMDb Top 250 over the years.</p>
                                 </div>
                                 <div class="menu-item-image has-meta-content">
-                                    <img src="imdb-top-250.png" />
+                                    <img src="assets/imdb-top-250.png" />
                                 </div>
                             </li>
                           <li class="menu-item">
