personal income tax world map

--- a/econometrics/index.html
+++ b/econometrics/index.html
@@ -28,6 +28,9 @@
         <li>
           <a href="india-state-wise-gdp/india-state-wise-gdp-current-prices-2017-18.html">India: State-wise GDP (current prices 1990-91)</a>
         </li>
+		<li>
+          <a href="world-tax-rates/income-tax-map/index.html">Country-wise maximum personal income tax rates</a>
+        </li>
       </ol>
     </div>
   </body>
