--- a/econometrics/world-tax-rates/income-tax-map/index.html
+++ b/econometrics/world-tax-rates/income-tax-map/index.html
@@ -77,9 +77,9 @@
 
 </style>
 <body>
-<script src="http://d3js.org/d3.v4.min.js"></script>
-<script src="http://d3js.org/queue.v1.min.js"></script>
-<script src="http://d3js.org/topojson.v1.min.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="https://d3js.org/queue.v1.min.js"></script>
+<script src="https://d3js.org/topojson.v1.min.js"></script>
 <script src="d3-tip.js"></script>
 <div id="title" style="font-weight: bold;">Country-wise maximum Personal Income Tax Rates (as in March 2019).<br><br></div>
 <script>
