--- a/music-catalogue/index.htm
+++ b/music-catalogue/index.htm
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="css/report.css" type="text/css">
   <link rel="stylesheet" href="css/theme.blue.css" type="text/css">
   <script src="scripts/jquery-3.3.1.min.js"></script>
-  <script src="http://mottie.github.com/tablesorter/js/jquery.tablesorter.js"></script>
-  <script src="http://mottie.github.com/tablesorter/js/jquery.tablesorter.widgets.js"></script>
+  <script src="scripts/jquery.tablesorter.js"></script>
+  <script src="scripts/jquery.tablesorter.widgets.js"></script>
+  <!-- <script src="http://mottie.github.com/tablesorter/js/jquery.tablesorter.js"></script>
+  <script src="http://mottie.github.com/tablesorter/js/jquery.tablesorter.widgets.js"></script> -->
   <script src="scripts/myscript.js"></script>
 </head>
 <body>
