--- a/music-catalogue/index.htm
+++ b/music-catalogue/index.htm
@@ -9,6 +9,8 @@
   <script src="scripts/jquery-3.3.1.min.js"></script>
   <script src="scripts/jquery.tablesorter.js"></script>
   <script src="scripts/jquery.tablesorter.widgets.js"></script>
+    <link rel="shortcut icon" href="../assets/favicon-16x16.png" type="image/x-icon">
+    <link rel="icon" href="../assets/favicon-16x16.png" type="image/x-icon">
   <!-- <script src="http://mottie.github.com/tablesorter/js/jquery.tablesorter.js"></script>
   <script src="http://mottie.github.com/tablesorter/js/jquery.tablesorter.widgets.js"></script> -->
   <script src="scripts/myscript.js"></script>
