--- a/music-catalogue/index.htm
+++ b/music-catalogue/index.htm
@@ -29,11 +29,11 @@
       Playlists: 14
     </p>
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'Contents')" data-href="contents.html" id="indexButton">Index</button>
-  <button class="tablinks" onclick="openCity(event, 'Artists')" data-href="artists.html" id="artistsButton">Artists</button>
-  <button class="tablinks" onclick="openCity(event, 'Albums')" data-href="albums.html" id="albumsButton">Albums</button>
-  <button class="tablinks" onclick="openCity(event, 'Playlists')" data-href="playlists.html" id="playlistsButton">Playlists</button>
-  <button class="tablinks" onclick="openCity(event, 'Tracklist')" data-href="tracklist.html" id="tracklistButton">Track List</button>
+  <button class="tablinks" onclick="activateTab('indexButton')" data-href="contents.html" id="indexButton">Index</button>
+  <button class="tablinks" onclick="activateTab('artistsButton')" data-href="artists.html" id="artistsButton">Artists</button>
+  <button class="tablinks" onclick="activateTab('albumsButton')" data-href="albums.html" id="albumsButton">Albums</button>
+  <button class="tablinks" onclick="activateTab('playlistsButton')" data-href="playlists.html" id="playlistsButton">Playlists</button>
+  <button class="tablinks" onclick="activateTab('tracklistButton')" data-href="tracklist.html" id="tracklistButton">Track List</button>
 </div>
 
 <div id="Contents" class="tabcontent" style="display:block;">
