--- a/media-consumption/index.html
+++ b/media-consumption/index.html
@@ -8,11 +8,19 @@
 </head>
 <body>
 
-<h1>The grid-template Property</h1>
+<div class="custom-select">
+<select onchange="updateMedia(this);">
+  <option value="-1">Choose Media:</option>
+  <option value="1">Films</option>
+  <option value="2">Books</option>
+  <option value="3">Music</option>
+</select>
+</div>
 
-<p>The grid-template property can also specify rows/columns using named grid items</p>
-<select onchange="updateMovieGrid(this);">
-  <option value="2019" selected>2019</option>
+<div class="custom-select">
+<select onchange="updateYear(this);">
+  <option value="-1">Select year:</option>
+  <option value="2019">2019</option>
   <option value="2018">2018</option>
   <option value="2017">2017</option>
   <option value="2016">2016</option>
@@ -26,11 +34,110 @@
   <option value="2008">2008</option>
   <option value="2007">2007</option>
 </select>
+</div>
 
 <div id="container" class="grid-container">
 </div>
-<div id="gr_grid_widget_1571492199" style="display: none;"></div>
+
+<!-- Below code is to fetch and update book cover links from goodreads. Refer to read me. -->
+<!-- <div id="gr_grid_widget_1571492199" style="display: none;"></div>
 <script src="https://www.goodreads.com/review/grid_widget/14214171.Yathish's%20bookshelf:%20read?cover_size=medium&hide_link=&hide_title=&num_books=200&order=d&shelf=read&sort=date_read&widget_id=1571492199" type="text/javascript" charset="utf-8"></script>
+
+<script type="text/javascript">
+  var a=[];$.each($('.gr_grid_book_container img'), function( index, value ) {
+  a.push(value.src.slice(70,value.src.length));
+});
+var b=[];$.each(a, function( index, value ) {
+  b.push(value.split("/"))[0];
+b[index][1]=b[index][1].split(".")[0];
+});
+var lineArray = [];
+b.forEach(function (infoArray, index) {
+    var line = infoArray.join(",");
+    lineArray.push(index == 0 ? "data:text/csv;charset=utf-8," + line : line);
+});
+var csvContent = lineArray.join("\n");
+copy(csvContent)
+</script> -->
+
+
+<script type="text/javascript">
+  //Below is for custom styling of select drop down menu. Picked up from https://www.w3schools.com/howto/howto_custom_select.asp
+var x, i, j, selElmnt, a, b, c;
+/*look for any elements with the class "custom-select":*/
+x = document.getElementsByClassName("custom-select");
+for (i = 0; i < x.length; i++) {
+  selElmnt = x[i].getElementsByTagName("select")[0];
+  /*for each element, create a new DIV that will act as the selected item:*/
+  a = document.createElement("DIV");
+  a.setAttribute("class", "select-selected");
+  a.innerHTML = selElmnt.options[selElmnt.selectedIndex].innerHTML;
+  x[i].appendChild(a);
+  /*for each element, create a new DIV that will contain the option list:*/
+  b = document.createElement("DIV");
+  b.setAttribute("class", "select-items select-hide");
+  for (j = 1; j < selElmnt.length; j++) {
+    /*for each option in the original select element,
+    create a new DIV that will act as an option item:*/
+    c = document.createElement("DIV");
+    c.innerHTML = selElmnt.options[j].innerHTML;
+    c.addEventListener("click", function(e) {
+        /*when an item is clicked, update the original select box,
+        and the selected item:*/
+        var y, i, k, s, h;
+        s = this.parentNode.parentNode.getElementsByTagName("select")[0];
+        h = this.parentNode.previousSibling;
+        for (i = 0; i < s.length; i++) {
+          if (s.options[i].innerHTML == this.innerHTML) {
+            s.selectedIndex = i;
+            s.onchange(); //IMPORTANT - this triggers updation of grid
+            h.innerHTML = this.innerHTML;
+            y = this.parentNode.getElementsByClassName("same-as-selected");
+            for (k = 0; k < y.length; k++) {
+              y[k].removeAttribute("class");
+            }
+            this.setAttribute("class", "same-as-selected");
+            break;
+          }
+        }
+        h.click();
+    });
+    b.appendChild(c);
+  }
+  x[i].appendChild(b);
+  a.addEventListener("click", function(e) {
+      /*when the select box is clicked, close any other select boxes,
+      and open/close the current select box:*/
+      e.stopPropagation();
+      closeAllSelect(this);
+      this.nextSibling.classList.toggle("select-hide");
+      this.classList.toggle("select-arrow-active");
+    });
+}
+function closeAllSelect(elmnt) {
+  /*a function that will close all select boxes in the document,
+  except the current select box:*/
+  var x, y, i, arrNo = [];
+  x = document.getElementsByClassName("select-items");
+  y = document.getElementsByClassName("select-selected");
+  for (i = 0; i < y.length; i++) {
+    if (elmnt == y[i]) {
+      arrNo.push(i)
+    } else {
+      y[i].classList.remove("select-arrow-active");
+    }
+  }
+  for (i = 0; i < x.length; i++) {
+    if (arrNo.indexOf(i)) {
+      x[i].classList.add("select-hide");
+    }
+  }
+}
+/*if the user clicks anywhere outside the select box,
+then close all select boxes:*/
+document.addEventListener("click", closeAllSelect);
+
+</script>
 
 </body>
 </html>
