--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
                         <ol class="menu-category-list has-images">
                             <li class="menu-item">
                                 <div class="menu-item-info">
+                                    <h4 class="menu-item-name">Media-Consumption</h4>
+                                    <span class="menu-item-price"><a href="https://yathish1618.github.io/media-consumption/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/tree/master/media-consumption" target="_blank">GitHub</a></span>
+                                    <p class="menu-item-description">All my movies, books and music showcased in chronological order.</p>
+                                </div>
+                                <div class="menu-item-image has-meta-content">
+                                    <img src="assets/media-consumption.jpg" />
+                                </div>
+                            </li>
+                            <li class="menu-item">
+                                <div class="menu-item-info">
                                     <h4 class="menu-item-name">IMDb-Top 250-Graph</h4>
                                     <span class="menu-item-price"><a href="https://yathish1618.github.io/imdb-top250-charts/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/tree/master/imdb-top250-charts" target="_blank">GitHub</a></span>
                                     <p class="menu-item-description">This is a page where you can see the trends in IMDb Top 250 over the years.</p>
@@ -209,6 +219,16 @@
                     <div id="pages" class="menu-category">
                         <h3 class="menu-category-name">Pages</h3>
                         <ol class="menu-category-list has-images">
+                            <li class="menu-item">
+                                <div class="menu-item-info">
+                                    <h4 class="menu-item-name">Media-Consumption</h4>
+                                    <span class="menu-item-price"><a href="https://yathish1618.github.io/media-consumption/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/tree/master/media-consumption" target="_blank">GitHub</a></span>
+                                    <p class="menu-item-description">All my movies, books and music showcased in chronological order.</p>
+                                </div>
+                                <div class="menu-item-image has-meta-content">
+                                    <img src="assets/media-consumption.jpg" />
+                                </div>
+                            </li>
                             <li class="menu-item">
                                 <div class="menu-item-info">
                                     <h4 class="menu-item-name">IMDb-Top 250-Graph</h4>
