--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <style type="text/css">
         .menu-item-description{
             text-align: center;
+            margin-top: 110px;
         }
     </style>
 </head>
@@ -299,8 +300,6 @@
                                     <img src="assets/india-religion-data.png" />
                                 </div></a>
                             </li>
-                        </ol>
-                        <ol class="menu-category-list has-images">
                             <li class="menu-item">
                                 <div class="menu-item-info">
                                     <h4 class="menu-item-name">you-see-a-gorgeous-girl</h4>
