--- a/constitution-of-india/index.html
+++ b/constitution-of-india/index.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
     body {
-        font-family: 'Source Sans Pro', sans-serif;
+        /*font-family: 'Source Sans Pro', sans-serif;*/
     }
     td{
     	vertical-align: top;
@@ -12,6 +13,25 @@
     li {
         list-style-type: none;
     }
+    #myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: red; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 10px; /* Some padding */
+  border-radius: 5px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
+}
     </style>
 </head>
 
@@ -22,6 +42,7 @@
                 <td colspan="3" style="text-align: center;background-color: #FF9933;color: white;">
                     <h1>The Constitution of India</h1>
                     <a>Updated on 12 January 2019 (up to 103<sup>rd</sup> amendment)</a>
+                    <br><br>
                 </td>
             </tr>
             <tr>
@@ -33,10 +54,12 @@
     </div>
     <table id="toc" align="center"></table>
     <div id="article">
-        <h5 id="nav"></h5>
+        <h4 id="nav"></h4>
         <h3 id="articleTitle" style="text-align: center;"></h3>
         <div id="articleText"></div>
     </div>
+    <br><br><br><br><br> <!-- Fex extra line breaks so that Go to top button doesn't hide text -->
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <script>
     var xmlhttp, xmlDoc;
     xmlhttp = new XMLHttpRequest();
@@ -118,6 +141,7 @@
         document.getElementById("articleTitle").innerHTML = "Article " + art.slice(3, art.length) + "." + result.innerHTML;
         getNextPrevArticles(art);
         document.getElementById("article").style.display = "block";
+        topFunction(); //scroll to top
         updateNavigation(art);
         return true;
     }
@@ -136,6 +160,7 @@
         var result = nodes.iterateNext();
         document.getElementById("articleTitle").innerHTML = result.textContent;
         document.getElementById("article").style.display = "block";
+        topFunction(); //scroll to top
         return true;
     }
 
@@ -223,7 +248,27 @@
         document.getElementById("nav").innerHTML = "";
     }
 
-    //document.getElementById("article").innerHTML=getArticle("art31A");
+
+
+    //Get the button:
+mybutton = document.getElementById("myBtn");
+
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0; // For Safari
+  document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+}
     </script>
 </body>
 
