--- a/imdb-top250-charts/index.html
+++ b/imdb-top250-charts/index.html
@@ -17,7 +17,7 @@
 <body>
     <a name="prevSearch" class="prevSearch" onclick="searchPrev()"><i class="fa">&#xf104;</i></a>
     <h2 id="currentSearch" class="currentSearch">IMDb Top 250 in 1996</h2>
-    <div id="more"><a href="https://github.com/yathish1618/yathish1618.github.io/blob/master/imdb-top250-charts/README.md" target="_blank">Read me</a>  |  <a href="1996-2018utf8.csv" id="csv" download>Download data (csv)</a> | <a href="https://yathish1618.github.io/imdb-rating-demographics/" target="_blank">IMDb Rating Demographics</a> | <a href="https://yathish1618.github.io/imdb-rating-history-graph/" target="_blank">IMDb Rating History</a> | <a href="https://yathish1618.github.io/" target="_blank">Home</a></div>
+    <div id="more"><a href="https://github.com/yathish1618/yathish1618.github.io/blob/master/imdb-top250-charts/README.md" target="_blank">Read me</a>  |  <a href="https://github.com/yathish1618/yathish1618.github.io/tree/master/imdb-top250-charts">Report Issue</a>  |  <a href="1996-2019utf8.csv" id="csv" download>Download data (csv)</a> | <a href="https://yathish1618.github.io/imdb-rating-demographics/" target="_blank">IMDb Rating Demographics</a> | <a href="https://yathish1618.github.io/imdb-rating-history-graph/" target="_blank">IMDb Rating History</a> | <a href="https://yathish1618.github.io/" target="_blank">Home</a></div>
     <a name="nextSearch" class="nextSearch" onclick="searchNext()"><i class="fa">&#xf105;</i></a>
     </tr>
     </tbody>
